Fixed pie graph tab showing scrollbar

--- a/static/styles/coverage.css
+++ b/static/styles/coverage.css
@@ -56,7 +56,7 @@ p {
     align-items: center;
     justify-content: center;
     padding: 2rem;
-    margin: 1.5rem 0;
+    margin: 1.5rem 0 0 0;
 }
 
 .pie-container > .pie {
